--- a/contact.html
+++ b/contact.html
@@ -12,15 +12,15 @@
 		/*font-size: 17pt;*/
 		font-size: 4.5vw;
 		position: absolute;
-		margin-top: -4vw;
+		margin-top: -5vw;
 		margin-left: 7vw;
 	}
 	#handles img{
 		height: 6vw;
 	}
 	#my_email{
-		margin-top: 0px;
-		margin-bottom: 0px;
+		margin-top: 0;
+		margin-bottom: 0;
 	}
 	#my_email #email_text{
 		position: absolute;
@@ -30,8 +30,8 @@
 		color: black;
 	}
 	#insta_handle{
-		margin-top: 0px;
-		margin-bottom: 0px;
+		margin-top: 0;
+		margin-bottom: 0;
 	}
 	#insta_handle #insta_text{
 		position: absolute;
@@ -84,6 +84,9 @@
 		background-color: #ff7800;
 		cursor: pointer;
 	}
+
+/*desktop below*/
+
 	@media (min-width: 992px), (orientation: landscape) {
 		#inner_box{
 			display: grid;
@@ -91,13 +94,13 @@
 			'doodle email_box';
 		}
 		#handles{
-			margin-top: -10px;
-			margin-left: 30px;
+			margin-top: -3vw;
+			margin-left: 2.5vw;
 			font-size: 2vw;
 		}
 		#my_email{
-			margin-top: 0px;
-			margin-bottom: 0px;
+			margin-top: 0;
+			margin-bottom: 0;
 			height: 5vh;
 		}
 		#my_email img{
@@ -106,13 +109,13 @@
 		#my_email #email_text{
 			position: absolute;
 			margin-top: .75vw;
-			margin-left: 13px;
+			margin-left: 1.5vw;
 			text-decoration: none;
 			color: black;
 		}
 		#insta_handle{
-			margin-top: 10px;
-			margin-bottom: 0px;
+			margin-top: 0;
+			margin-bottom: 0;
 			height: 5vh;
 		}
 		#insta_handle img{
@@ -121,50 +124,50 @@
 		#insta_handle #insta_text{
 			position: absolute;
 			margin-top: .55vw;
-			margin-left: 10px;
+			margin-left: 1.15vw;
 			text-decoration: none;
 			color: black;
 		}
 		#doodle{
-			width: auto;
-			height: 75vh;
+			height: auto;
+			width: 50vw;
 		}
 		#email_box{
-			margin: 0px/*top*/ 0px/*right*/ 20px/*bottom*/ 0px/*left*/;
-			width: 47vw;
+			margin: -2vw/*top*/ 0/*right*/ 2vw/*bottom*/ 0/*left*/;
+			width: 45vw;
 			height: auto;
+			font-size: 2vw;
 		}
 		#email_box input{
 			width: 100%;
-			height: 3em;
-			margin-top: 10px;
-			margin-bottom: 10px;
-			font-size: 16pt;
+			height: 4vw;
+			margin-top: .5vw;
+			margin-bottom: 1vw;
+			font-size: 2vw;
 			font-family: 'Josefin Slab', serif;
-			padding: 0px 1px 0px 15px;;
+			padding: 0 .1vw 0px 1vw;;
 		}
 		#email_box textarea{
 			width: 100%;
-			height: 17em;
-			margin-top: 10px;
-			margin-bottom: 0px;
-			font-size: 16pt;
+			height: 12vw;
+			margin-top: .5vw;
+			margin-bottom: 0;
+			font-size: 2vw;
 			font-family: 'Josefin Slab', serif;
-			padding: 10px 1px 0px 15px;
+			padding: 1vw .1vw 0 1vw;
 			rows: 20;
 		}
 		#email_box button{
 			background-color: black;
-			border-radius: 0px;
+			border-radius: 0;
 			border: 0;
 			color: white;
 			font-family: 'Amatic SC', cursive;
-			font-size: 30pt;
-			margin-top: 8px;
-			margin-right: 0px;
-			padding-left: 7px;
-			padding-right: 7px;
-			float: right;
+			font-size: 3vw;
+			padding-left: 1vw;
+			padding-right: 1vw;
+			margin-top: 1vw;
+			margin-right: 0;
 		}
 	}
 </style>
