--- a/shop.html
+++ b/shop.html
@@ -42,7 +42,7 @@ function preview_image(event)
 		font-family: 'Josefin Slab', serif;
 		font-size: 7vw;
 		color: #ffffff;
-		border-radius: 2vw;
+		border-radius: 0vw;
 		border: 0;
 		background-color: #000000;
 		padding-left: 1.5vw;
@@ -140,13 +140,13 @@ function preview_image(event)
 		position: absolute;
 		background-color: #ffddc7;
 		height: 9vw;
-		width: 75vw;
+		width: 88vw;
 		border-radius: 1vw;
 		left: 0;
 		margin-top: .6vw;
 	}
 	.corner{
-		border-radius: 0px;
+		border-radius: 0;
 		width: 10%;
 	}
 	#estimate_header{
@@ -154,7 +154,7 @@ function preview_image(event)
 		font-family: 'Amatic SC', cursive;
 		font-weight: 700;
 		font-size: 8vw;
-		margin-left: 16vw;
+		margin-left: 29vw;
 		margin-top: 0vw;
 		margin-bottom: 5vw;
 		color: #ff7800;
@@ -188,14 +188,154 @@ function preview_image(event)
 		background-color: #ff7800;
 	}
 	#output_price{
-		margin-top: 5vw;
+		margin-top: 0vw;
 		font-size: 5vw;
 		font-weight: 700;
+		margin-right: 1vw;
 	}
 
 	#doodle{
 		width: 100%;
 		height: auto;
+	}
+
+/*desktop below*/
+
+	@media (min-width: 992px), (orientation: landscape) {
+		#inner_box{
+			display: grid;
+			grid-template-areas: 
+			'heading email_box'
+			'slideshow email_box'
+			'estimate_heading estimate_heading'
+			'doodle calc_box';
+		}
+		#slideshow{
+			margin-left: 4vw;
+		}
+		.slides img{
+			height: 28.25vw;
+			width: auto;
+			margin-left: auto;
+			margin-right: auto;
+		}
+		.slide_button{
+			z-index: 99;
+			margin-top: -16vw;
+			font-size: 3vw;
+			border-radius: 0vw;
+		}
+		.prev{
+			left: 4.25vw;
+		}
+		.next{
+			right: 53.25vw;
+		}
+		#heading{
+			position: absolute;
+			float: left;
+			margin-left: 4.5vw;
+			margin-top: -2vw;
+			padding: 0;
+		}
+		#commission{
+			font-size: 4vw;
+			margin-left: 0vw;
+			margin-top: 0vw;
+		}
+		#estimate{
+			font-size: 2vw;
+			margin-left: .15vw;
+		}
+		#email_box{
+			font-size: 2vw;
+			width: 45vw;
+			padding-bottom: 0;
+			margin-left: 5vw;
+			margin-top: -1vw;
+		}
+		#email_box input{
+			margin-top: .5vw;
+			height: 4vw;
+			font-size: 2vw;
+			padding: 0vw 0vw 0vw 1vw;
+			margin-bottom: 1vw;
+/*			width: 100%;
+			height: 12vw;
+			margin-top: 1.5vw;
+			margin-bottom: 1.5vw;
+			font-size: 5vw;
+			font-family: 'Josefin Slab', serif;*/
+		}
+		#email_box textarea{
+			height: 11vw;
+			margin-top: .5vw;
+			margin-bottom: 0;
+		}
+		#email_box button{
+			font-size: 3vw;
+			padding-left: 1.2vw;
+			padding-right: 1vw;
+			margin-top: -1vw;
+		}
+		#email_box .attach{
+			margin-right: 4vw;
+		}
+		#output_image{
+		 	max-height: 4vw;
+		 	margin: -1vw/*top*/ 0/*right*/ 0/*bottom*/ 1vw/*left*/;
+		}
+
+/*desktop estimate stuff below*/
+		.estimate_bar {
+			height: 5vw;
+			width: 60vw;
+			border-radius: 1vw;
+			left: 0;
+			margin-top: .6vw;
+		}
+		.corner{ 
+			border-radius: 0;
+			width: 2vw;
+		}
+		#estimate_header{
+			position: absolute;
+			font-size: 4vw;
+			margin-left: 30.5vw;
+			margin-top: .5vw;
+/*			margin-top: 0vw;
+			margin-bottom: 5vw;*/
+		}
+		#doodle{
+			position: relative;
+			margin-top: 9vw;
+			margin-left: -50vw;
+			width: 50vw;
+			height: auto;
+			float: left;
+		}
+		#calc_box{
+			width: 45vw;
+			position: absolute;
+			font-size: 2vw;
+			margin: 56vw/*top*/ 0/*right*/ 0vw/*bottom*/ 51.4vw/*left*/;
+		}
+		#calc_box input{
+			width: 9vw;
+			font-size: 4vw;
+			padding: 1vw/*top*/ 0vw/*left*/ 0vw/*bottom*/ 0vw/*right*/;
+		}
+		#calc_box button{
+			font-size: 3vw;
+			padding-left: 1.2vw;
+			padding-right: 1vw;
+		}
+		#output_price{
+			font-size: 2vw;
+			margin-top: 2vw;
+			margin-right: 0vw;
+			float: right;
+		}
 	}
 
 </style>
@@ -216,7 +356,7 @@ function preview_image(event)
 	</div>
 <div id="inner_box">
 <!--page specific-->
-
+<div id="slideshow">
 	<div class="slides">
 		<img class="pics" src="assets/commissions/cat1_1.JPG">
 	</div>
@@ -241,9 +381,12 @@ function preview_image(event)
 
 	<button class="slide_button prev" onclick="plusSlides(-1)"><</button>
 	<button class="slide_button next" style="display: inline;" onclick="plusSlides(1)">></button>
+</div>
 
+<div id="heading">
 	<p id="commission">commission a custom painting</p>
 	<p id="estimate"><a href="#estimate_header">click for price estimate</a></p>
+</div>
 
 	<div id="email_box">
 		<form method="POST" action="https://formsubmit.co/annie.t.courtney@gmail.com" enctype="multipart/form-data">
@@ -268,14 +411,16 @@ function preview_image(event)
 
 				<button type="button" class="attach" id="attach" onclick="document.getElementById('upload').click();" />attach&nbsp;&nbsp;image</button>
 				<input type="file" style="display:none;" id="upload" name="upload" accept="image/*" onchange="preview_image(event)"/>
-				<img id="output_image"/>
 			</p>
+			<img id="output_image"/>
 		</form>
 	</div>
 <!-- estimate stuff below -->
+<div id="estimate_heading">
   	<div class="estimate_bar "></div>
   	<div class="estimate_bar corner"></div>
 	<p id="estimate_header">Custom Painting Pricing</p>
+</div>
 	<img id="doodle" src="assets/hanging_pictures.png">
 	<div id="calc_box">
 		<input type="number" id="length" value="0">
@@ -283,10 +428,11 @@ function preview_image(event)
 		<input type="number" id="width" value="0">
 		inches
 		<br>
-		<p id="output_price"></p>
+		<br>
 		<button type="button"
 		onclick="document.getElementById('output_price').innerHTML = output()">
 		estimate&nbsp;&nbsp;price</button>
+		<p id="output_price"></p>
 <!-- 		<br>
 		<br>
 		<br>
