shop page fixes

--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
 		margin-top: -5vw;
 		margin-left: 7vw;
 	}
-	#handles img{
+/*	#handles img{
 		height: 6vw;
-	}
+	}*/
 	#my_email{
 		margin-top: 0;
 		margin-bottom: 0;
@@ -35,7 +35,7 @@
 	}
 	#insta_handle #insta_text{
 		position: absolute;
-		margin-top: .4vh;
+		margin-top: .5vw;
 		margin-left: 1.15vw;
 		text-decoration: none;
 		color: black;
@@ -93,6 +93,9 @@
 			grid-template-areas: 
 			'doodle email_box';
 		}
+		#handles img{
+			width: 2.5vw;
+		}
 		#handles{
 			margin-top: -3vw;
 			margin-left: 2.5vw;
@@ -101,30 +104,30 @@
 		#my_email{
 			margin-top: 0;
 			margin-bottom: 0;
-			height: 5vh;
+			/*height: 5vh;*/
 		}
 		#my_email img{
-			margin-top: -1.4vw;
+			margin-top: .25vw;
 		}
 		#my_email #email_text{
 			position: absolute;
 			margin-top: .75vw;
-			margin-left: 1.5vw;
+			margin-left: 1vw;
 			text-decoration: none;
 			color: black;
 		}
 		#insta_handle{
 			margin-top: 0;
 			margin-bottom: 0;
-			height: 5vh;
+			/*height: 5vh;*/
 		}
 		#insta_handle img{
-			margin-top: -1.4vw;
+			margin-top: .5vw;
 		}
 		#insta_handle #insta_text{
 			position: absolute;
-			margin-top: .55vw;
-			margin-left: 1.15vw;
+			margin-top: .75vw;
+			margin-left: .75vw;
 			text-decoration: none;
 			color: black;
 		}
@@ -190,8 +193,8 @@
 <!--page specific-->
 
 	<div id="handles">
-		<a href="mailto:annie.t.courtney@gmail.com"><p id="my_email"><img id="puffalope" src="assets/mail.svg" width="30em"><a id="email_text" href="mailto:annie.t.courtney@gmail.com"> annie.t.courtney@gmail.com</a></p></a>
-		<a href="http://instagram.com/annietcourtney"><p id="insta_handle"><img id="insta_icon" src="assets/insta.svg" width="30em"><a id="insta_text" href="http://instagram.com/annietcourtney"> @annietcourtney</a></p></a>
+		<a href="mailto:annie.t.courtney@gmail.com"><p id="my_email"><img id="puffalope" src="assets/mail.svg" width="30vw"><a id="email_text" href="mailto:annie.t.courtney@gmail.com"> annie.t.courtney@gmail.com</a></p></a>
+		<a href="http://instagram.com/annietcourtney"><p id="insta_handle"><img id="insta_icon" src="assets/insta.svg" width="30vw"><a id="insta_text" href="http://instagram.com/annietcourtney"> @annietcourtney</a></p></a>
 	</div>
 
 	<img  id="doodle" src="assets/contact_me_sample.png" alt="doodle of girl on phone">
