--- a/shop.html
+++ b/shop.html
@@ -35,7 +35,7 @@ function preview_image(event)
 		margin-right: auto;
 		margin-top: 7vw;
 		padding: 0;
-		margin-bottom: 0;
+		margin-bottom: 0vw;
 	}
 	.slide_button{
 		/*z-index: 99;*/
@@ -48,14 +48,14 @@ function preview_image(event)
 		padding-left: 1.5vw;
 		padding-right: 1.5vw;
 		position: absolute;
-		top: 67vw;
+		top: 69.5vw;
 		font-weight: 700;
 	}
 	.prev{
-		left: 7vw;
+		left: 2vw;
 	}
 	.next{
-		right: 7vw;
+		right: 2vw;
 	}
 	.slide_button:hover{
 		color: #ffffff;
@@ -212,6 +212,7 @@ function preview_image(event)
 		}
 		#slideshow{
 			margin-left: 4vw;
+			width: 43vw;
 		}
 		.slides img{
 			height: 28.25vw;
@@ -221,15 +222,16 @@ function preview_image(event)
 		}
 		.slide_button{
 			z-index: 99;
-			margin-top: -16vw;
+			margin-top: 0vw;
+			top: 34vw;
 			font-size: 3vw;
 			border-radius: 0vw;
 		}
 		.prev{
-			left: 4.25vw;
+			left: 2vw;
 		}
 		.next{
-			right: 53.25vw;
+			right: 51vw;
 		}
 		#heading{
 			position: absolute;
@@ -334,7 +336,7 @@ function preview_image(event)
 			font-size: 2vw;
 			margin-top: 2vw;
 			margin-right: 0vw;
-			float: right;
+			float: left;
 		}
 	}
 
