moved estimate doodle on desktop

--- a/shop.html
+++ b/shop.html
@@ -191,7 +191,7 @@ function preview_image(event)
 		margin-top: 0vw;
 		font-size: 5vw;
 		font-weight: 700;
-		margin-right: 1vw;
+		margin-right: 0vw;
 	}
 
 	#doodle{
@@ -208,7 +208,7 @@ function preview_image(event)
 			'heading email_box'
 			'slideshow email_box'
 			'estimate_heading estimate_heading'
-			'doodle calc_box';
+			'calc_box doodle';
 		}
 		#slideshow{
 			margin-left: 4vw;
@@ -311,7 +311,7 @@ function preview_image(event)
 		#doodle{
 			position: relative;
 			margin-top: 9vw;
-			margin-left: -50vw;
+			margin-left: 0vw;
 			width: 50vw;
 			height: auto;
 			float: left;
@@ -320,7 +320,7 @@ function preview_image(event)
 			width: 45vw;
 			position: absolute;
 			font-size: 2vw;
-			margin: 56vw/*top*/ 0/*right*/ 0vw/*bottom*/ 51.4vw/*left*/;
+			margin: 56vw/*top*/ 0/*right*/ 0vw/*bottom*/ 4vw/*left*/;
 		}
 		#calc_box input{
 			width: 9vw;
@@ -331,6 +331,7 @@ function preview_image(event)
 			font-size: 3vw;
 			padding-left: 1.2vw;
 			padding-right: 1vw;
+			float: left;
 		}
 		#output_price{
 			font-size: 2vw;
