--- a/shop.html
+++ b/shop.html
@@ -262,17 +262,13 @@ function preview_image(event)
 			font-size: 2vw;
 			padding: 0vw 0vw 0vw 1vw;
 			margin-bottom: 1vw;
-/*			width: 100%;
-			height: 12vw;
-			margin-top: 1.5vw;
-			margin-bottom: 1.5vw;
-			font-size: 5vw;
-			font-family: 'Josefin Slab', serif;*/
 		}
 		#email_box textarea{
 			height: 11vw;
+			font-size: 2vw;
 			margin-top: .5vw;
 			margin-bottom: 0;
+			padding: 1vw 1vw 0vw 1vw;
 		}
 		#email_box button{
 			font-size: 3vw;
