--- a/shop_submitted.html
+++ b/shop_submitted.html
@@ -23,6 +23,38 @@ function preview_image(event)
 
 </head>
 <style>
+	.alert {
+	  padding-left: 5vw;
+	  padding-right: 5vw;
+	  padding-bottom: 5vw;
+	  padding-top: 1vw;
+	  background-color: #000000;
+	  color: white;
+	  font-family: 'Josefin Slab', serif;
+	  font-weight: 700;
+	  font-size: 5vw;
+	  margin-top: 1vw;
+	  margin-bottom: 10vw;
+	  width: 100%;
+	}
+	.closebtn {
+	  margin-left: 7vw;
+	  color: white;
+	  font-weight: bold;
+	  float: right;
+	  font-size: 15vw;
+	  font-weight: 400;
+	  line-height: 0vw;
+	  margin-right: -2vw;
+	  cursor: pointer;
+	  margin-bottom: 1vw;
+	  margin-top: 5vw;
+	  font-family:'Josefin Slab', sans-serif;
+	}
+	.closebtn:hover {
+	  color: #ff7800;
+	}
+/*submit confirmation above*/
 	.slides {
 		display: none;
 	}	
@@ -218,6 +250,34 @@ function preview_image(event)
 			'calc_box doodle';
 		}
 
+		.alert {
+		  padding-left: 2vw;
+		  padding-right: 2vw;
+		  padding-bottom: 3vw;
+		  padding-top: 1vw;
+		  background-color: #000000;
+		  color: white;
+		  font-family: 'Josefin Slab', serif;
+		  font-weight: 700;
+		  font-size: 2vw;
+		  margin-top: -1vw;
+		  margin-bottom: 6vw;
+		  width: 100%;
+		  text-align: center;
+		}
+		.closebtn {
+		  margin-left: 0vw;
+		  color: white;
+		  float: right;
+		  font-size: 5vw;
+		  font-weight: 400;
+		  margin-right: 0vw;
+		  margin-top: 1vw;
+		  cursor: pointer;
+		  font-family:'Josefin Slab', sans-serif;
+		}
+
+
 
 		#slideshow{
 			margin-left: 4vw;
@@ -366,6 +426,12 @@ function preview_image(event)
 	</div>
 <div id="inner_box">
 <!--page specific-->
+
+<div class="alert">
+  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+  <br>
+  Thank you! Your request has been submitted and I will get back to you as soon as possible. - Annie
+</div>
 
 <div id="slideshow">
 	<div class="slides">
