--- a/contact_submitted.html
+++ b/contact_submitted.html
@@ -273,7 +273,7 @@
 	<div id="email_box">
 		<form action="https://formsubmit.co/annie.t.courtney@gmail.com" 
 method="POST">
-			<input type="hidden" name="_next" value="https://annietrue.github.io/anniecourtney.art/contact.html">
+			<input type="hidden" name="_next" value="https://annietrue.github.io/anniecourtney.art/contact_submitted.html">
 			<input type="text" name="_honey">
 			<input type="hidden" name="_autoresponse" value="Thanks so much for reaching out! I will get back to you as soon as possible. - Annie">
 			<input type="hidden" name="_template" value="box">
