--- a/shop.html
+++ b/shop.html
@@ -401,7 +401,7 @@ function preview_image(event)
 
 	<div id="email_box">
 		<form method="POST" action="https://formsubmit.co/annie.t.courtney@gmail.com" enctype="multipart/form-data">
-			<input type="hidden" name="_next" value="https://annietrue.github.io/anniecourtney.art/shop.html">
+			<input type="hidden" name="_next" value="https://annietrue.github.io/anniecourtney.art/shop_submitted.html">
 			<input type="text" name="_honey">
 			<input type="hidden" name="_autoresponse" value="Thank you so much for your interest in my work! I will get back to you about your custom painting request as soon as possible. - Annie">
 			<input type="hidden" name="_template" value="box">
