--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 		margin-top: 0%;
 		margin-bottom: 0%;
 		padding: 0px;
+		cursor: pointer;
 	}
 	#artworks video{
 		width: 100%;
 		height: auto;
 		margin-top: 0%;
 		margin-bottom: 0%;
+		cursor: pointer;
 	}
 
 	#back2top{
