--- a/shop.html
+++ b/shop.html
@@ -62,6 +62,7 @@ function preview_image(event)
 	.slide_button:hover{
 		color: #ffffff;
 		background-color: #ff7800;
+		cursor: pointer;
 	}
 	#commission{
 		margin-top: 4vw;
@@ -192,6 +193,7 @@ function preview_image(event)
 	}
 	#calc_box button:hover{
 		background-color: #ff7800;
+		cursor: pointer;
 	}
 	#output_price{
 		margin-top: 0vw;
