--- a/shop_submitted.html
+++ b/shop_submitted.html
@@ -94,6 +94,7 @@ function preview_image(event)
 	.slide_button:hover{
 		color: #ffffff;
 		background-color: #ff7800;
+		cursor: pointer;
 	}
 	#commission{
 		margin-top: 4vw;
@@ -224,6 +225,7 @@ function preview_image(event)
 	}
 	#calc_box button:hover{
 		background-color: #ff7800;
+		cursor: pointer;
 	}
 	#output_price{
 		margin-top: 0vw;
