--- a/shop.html
+++ b/shop.html
@@ -23,6 +23,39 @@ function preview_image(event)
 
 </head>
 <style>
+	.alert {
+	  display: none;
+	  padding-left: 5vw;
+	  padding-right: 5vw;
+	  padding-bottom: 5vw;
+	  padding-top: 1vw;
+	  background-color: #000000;
+	  color: white;
+	  font-family: 'Josefin Slab', serif;
+	  font-weight: 700;
+	  font-size: 5vw;
+	  margin-top: 1vw;
+	  margin-bottom: 10vw;
+	  width: 100%;
+	}
+	.closebtn {
+	  margin-left: 7vw;
+	  color: white;
+	  font-weight: bold;
+	  float: right;
+	  font-size: 15vw;
+	  font-weight: 400;
+	  line-height: 0vw;
+	  margin-right: -2vw;
+	  cursor: pointer;
+	  margin-bottom: 1vw;
+	  margin-top: 5vw;
+	  font-family:'Josefin Slab', sans-serif;
+	}
+	.closebtn:hover {
+	  color: #ff7800;
+	}
+/*submit confirmation above*/
 	.slides {
 		display: none;
 	}	
@@ -164,11 +197,12 @@ function preview_image(event)
 		margin-left: 29vw;
 		margin-top: 0vw;
 		margin-bottom: 5vw;
-		color: #ff7800;
+		color: black;
 	}
 	#calc_box{
 		font-size: 5vw;
 		margin: 0vw/*top*/ 7vw/*right*/ 0vw/*bottom*/ 7vw/*left*/;
+		position: relative;
 	}
 	#calc_box input{
 		font-family: 'Josefin Slab', serif;
@@ -201,10 +235,24 @@ function preview_image(event)
 		font-weight: 700;
 		margin-right: 0vw;
 	}
+	#output_info{
+		position: absolute;
+		margin-top: -9.5vw;
+		font-size: 3.5vw;
+		font-weight: 700;
+		margin-right: 0vw;
+	}
 
 	#doodle{
 		width: 100%;
 		height: auto;
+		position: relative;
+	}
+	#doodle_left{
+		display: none;
+	}
+	#doodle_right{
+		display: none;
 	}
 
 /*desktop below*/
@@ -218,6 +266,34 @@ function preview_image(event)
 			'slideshow email_box'
 			'estimate_heading'
 			'calc_box doodle';
+		}
+
+		.alert {
+		  display: none;
+		  padding-left: 2vw;
+		  padding-right: 2vw;
+		  padding-bottom: 3vw;
+		  padding-top: 1vw;
+		  background-color: #000000;
+		  color: white;
+		  font-family: 'Josefin Slab', serif;
+		  font-weight: 700;
+		  font-size: 2vw;
+		  margin-top: -1vw;
+		  margin-bottom: 6vw;
+		  width: 100%;
+		  text-align: center;
+		}
+		.closebtn {
+		  margin-left: 0vw;
+		  color: white;
+		  float: right;
+		  font-size: 5vw;
+		  font-weight: 400;
+		  margin-right: 0vw;
+		  margin-top: 1vw;
+		  cursor: pointer;
+		  font-family:'Josefin Slab', sans-serif;
 		}
 
 
@@ -294,42 +370,60 @@ function preview_image(event)
 		}
 		#output_image{
 		 	max-height: 4vw;
-		 	margin: -1vw/*top*/ 0/*right*/ 0/*bottom*/ 1vw/*left*/;
+		 	margin: -1vw/*top*/ 0vw/*right*/ 0/*bottom*/ 1vw/*left*/;
 		}
 
 /*desktop estimate stuff below*/
 		.estimate_bar {
-			height: 5vw;
-			width: 60vw;
-			border-radius: 1vw;
-			left: 0;
-			margin-top: .6vw;
+			height: 4.2vw;
+			width: 97vw;
+			border-radius: .35vw;
+			margin-top: 1vw;
+			margin-left: 1.5vw;
 		}
 		.corner{ 
+			display: none;
 			border-radius: 0;
 			width: 2vw;
 		}
 		#estimate_header{
 			position: relative;
 			font-size: 4vw;
-			margin-left: 30.5vw;
+			margin-left: 2.5vw;
 			margin-top: .5vw;
-/*			margin-top: 0vw;
-			margin-bottom: 5vw;*/
-		}
-		#doodle{
-			position: relative;
-			margin-top: -2vw;
-			margin-left: 45vw;
-			width: 55vw;
-			height: auto;
 			float: left;
 		}
-		#calc_box{
-			width: 45vw;
+		#doodle{
+			display: none;
+		}
+		#doodles{
+			width: 92%;
+			margin-right: 4vw;
+			margin-left: 4vw;
+			margin-top: -3vw;
 			position: relative;
+		}
+		#doodle_left{
+			display: inline-block;
+			width: 30vw;
+			height: auto;
+			margin-left: 10vw;
+		}
+		#doodle_right{
+			display: inline-block;
+			width: 30vw;
+			height: auto;
+			float: right;
+			margin-top: 18.75vw;
+			margin-right: 7vw;
+		}
+		#calc_box{
+			width: 33vw;
+			height: 30vw;
+			position: absolute;
 			font-size: 2vw;
-			margin: -37vw/*top*/ 0/*right*/ 0vw/*bottom*/ 4vw/*left*/;
+			margin: -30vw/*top*/ 0/*right*/ 0vw/*bottom*/ 26vw/*left*/;
+			z-index: 99;
 		}
 		#calc_box input{
 			width: 9vw;
@@ -343,10 +437,17 @@ function preview_image(event)
 			float: left;
 		}
 		#output_price{
-			font-size: 2vw;
-			margin-top: 2vw;
-			margin-right: 0vw;
+			position: absolute;
+			font-size: 3vw;
+			margin-top: 5.5vw;
+			margin-left: .25vw;
 			float: left;
+		}
+		#output_info{
+			position: absolute;
+			margin-top: 7vw;
+			font-size: 2vw;
+			margin-left: -14.5vw;
 		}
 	}
 
@@ -368,6 +469,12 @@ function preview_image(event)
 	</div>
 <div id="inner_box">
 <!--page specific-->
+
+<div class="alert">
+  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+  <br>
+  Thank you! Your request has been submitted and I will get back to you as soon as possible. - Annie
+</div>
 
 <div id="slideshow">
 	<div class="slides">
@@ -439,7 +546,10 @@ function preview_image(event)
   	<div class="estimate_bar corner"></div>
 	<p id="estimate_header">Custom Painting Pricing</p>
 </div>
+<div id="doodles">
 	<img id="doodle" src="assets/hanging_pictures.png">
+	<img id="doodle_left" src="assets/hanging_left.png">
+	<img id="doodle_right" src="assets/hanging_right.png">
 	<div id="calc_box">
 		<input type="number" id="length" value="0">
 		inches by 
@@ -448,14 +558,13 @@ function preview_image(event)
 		<br>
 		<br>
 		<button type="button"
-		onclick="document.getElementById('output_price').innerHTML = output()">
+		onclick="document.getElementById('output_price').innerHTML = output(); document.getElementById('output_info').innerHTML = output_info();">
 		estimate&nbsp;&nbsp;price</button>
 		<p id="output_price"></p>
-<!-- 		<br>
 		<br>
-		<br>
-		<p id="output_price"></p> -->
+		<a id="output_info"></a>
 	</div>
+</div>
 <!-- ^^^ page specific ^^^ -->
 </div>
 	<div id="footer">All work &#169; Annie Courtney unless otherwise  noted.</div>
@@ -529,7 +638,10 @@ function preview_image(event)
 		return Math.ceil(canvas + paint + hours);
 	}
 	function output(){
-		return '$'+lowEstimate(document.getElementById('length').value, document.getElementById('width').value)+' - $'+highEstimate(document.getElementById('length').value, document.getElementById('width').value)+' (depending on the level of detail)';
+		return '$'+lowEstimate(document.getElementById('length').value, document.getElementById('width').value)+' - $'+highEstimate(document.getElementById('length').value, document.getElementById('width').value);
+	}
+	function output_info(){
+		return '(depending on the level of detail)';
 	}
 </script>
 </body>
