--- a/shop.html
+++ b/shop.html
@@ -125,7 +125,7 @@ function preview_image(event)
 		font-size: 5vw;
 		margin-left: 7vw;
 		margin-right: 7vw;
-		margin-bottom: 5vw;
+		margin-bottom: 15vw;
 	}
 	#email_box input{
 		width: 100%;
@@ -166,9 +166,8 @@ function preview_image(event)
 		cursor: pointer;
 	}
 	#output_image{
-	 	max-width: 50vw;
-
-	 	margin: 7vw/*top*/ 0/*right*/ 7vw/*bottom*/ 0/*left*/;
+	 	max-height: 9vw;
+	 	margin: 2vw/*top*/ 0/*right*/ 0vw/*bottom*/ 2vw/*left*/;
 	}
 
 	input[name="_honey"] {
