attach pic size changes

--- a/shop.html
+++ b/shop.html
@@ -166,7 +166,7 @@ function preview_image(event)
 		cursor: pointer;
 	}
 	#output_image{
-	 	max-height: 9vw;
+	 	max-width: 25vw;
 	 	margin: 2vw/*top*/ 0/*right*/ 0vw/*bottom*/ 2vw/*left*/;
 	}
 
