--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 			margin-left: 1vw;
 			display: grid;
 		    grid-template-columns: repeat(15, 1fr);
-		    grid-template-rows: repeat(22, 10vw);
+		    grid-template-rows: repeat(23, 10vw);
 		    grid-gap: 1vw;
 		}
 		#artworks img{
@@ -304,15 +304,15 @@
 		}
 		#moai{
 			grid-column-start: 1;
-		    grid-column-end: 9;
+		    grid-column-end: 8;
 		    grid-row-start: 21;
-		    grid-row-end: 23;
+		    grid-row-end: 24;
 		}
 		#spider{
-			grid-column-start: 9;
+			grid-column-start: 8;
 		    grid-column-end: 16;
 		    grid-row-start: 21;
-		    grid-row-end: 23;
+		    grid-row-end: 24;
 		}
 
 /*desktop lightbox below*/
@@ -477,10 +477,10 @@
 		<video id="scream" onclick="openModal();currentSlide(8)" controls src="assets/artwork/scream.mov" type="video/mov" poster="assets/artwork/thumbnails/scream_cover.png" alt="animation of a scream switch being pulling inside a mouth">Your browser does not support the video tag.</video>
 		<video id="abstract" onclick="openModal();currentSlide(9)" poster="assets/artwork/thumbnails/tcaoy_cover.png" controls><source src="assets/artwork/tcaoy.mp4" type="video/mp4" alt="animation of abstract light and colors">Your browser does not support the video tag.</video>
 		<img id="mouth" onclick="openModal();currentSlide(10)" src="assets/artwork/mouth.gif" alt="animation of a mouth opeing and a beetle crawling on the tongue">
-		<video id="privacy" onclick="openModal();currentSlide(11)" controls src="assets/artwork/ijwsp.mov" type="video/mov" alt="demo of an app where a spider creature gets scared if you make noise">Your browser does not support the video tag.</video>
+		<video id="privacy" onclick="openModal();currentSlide(11)" poster="assets/artwork/thumbnails/ijwsp_cover.png" controls><source src="assets/artwork/ijwsp.mp4" type="video/mp4" alt="demo of an app where a spider creature gets scared if you make noise">Your browser does not support the video tag.</video>
 		<img id="self" onclick="openModal();currentSlide(12)" src="assets/artwork/selfportrait.PNG" alt="digital drawing of a girl and bugs">
 		<video id="moai" onclick="openModal();currentSlide(13)" poster="assets/artwork/thumbnails/moai_cover.png" controls src="assets/artwork/Among the Moai.mov" type="video/mov" alt="3d animation of a ufo bringing the statues of easter island to life">Your browser does not support the video tag.</video>
-		<video id="spider" onclick="openModal();currentSlide(14)" poster="assets/artwork/thumbnails/spider_cover.png" controls><source src="assets/artwork/spider.mp4" type="video/mp4" alt="3d animation of a spider with a human-like head dancing">Your browser does not support the video tag.</video>
+		<video id="spider" onclick="openModal();currentSlide(14)" poster="assets/artwork/thumbnails/spider_cover.png" controls src="assets/artwork/spider.mov" type="video/mov" alt="3d animation of a spider with a human-like head dancing">Your browser does not support the video tag.</video>
 		<img id="earthling" onclick="openModal();currentSlide(15)" src="assets/artwork/earthling.gif" alt="animation of an eye opening and plants growing out and an ant crawling out">
 	</div>
 
@@ -538,7 +538,7 @@
 
     <div class="mySlides">
       <div class="numbertext">11 / 15</div>
-      <video controls src="assets/artwork/ijwsp.mov" type="video/mov">Your browser does not support the video tag.</video>
+      	<video poster="assets/artwork/thumbnails/ijwsp_cover.png" controls><source src="assets/artwork/ijswp.mp4" type="video/mp4">Your browser does not support the video tag.</video>
     </div>
 
     <div class="mySlides">
@@ -552,7 +552,7 @@
 
     <div class="mySlides">
       <div class="numbertext">14 / 15</div>
-      <video poster="assets/artwork/thumbnails/spider_cover.png" controls><source src="assets/artwork/spider.mp4" type="video/mp4">Your browser does not support the video tag.</video>
+      <video poster="assets/artwork/thumbnails/spider_cover.png" controls src="assets/artwork/spider.mov" type="video/mov">Your browser does not support the video tag.</video>
     </div>
 
     <div class="mySlides">
