mobile b2t padding and ijwsp typo fix

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 	  font-weight: bolder;
 	  font-size: 10vw;
 	  padding-bottom: 2vw;
+	  padding-left: 1vw;
+	  padding-right: 1vw;
 	  border-radius: 0vw;
 	  /*font-weight: 700;*/
 	}
@@ -203,6 +205,8 @@
 		  font-size: 5vw;
 		  border-radius: 0vw;
 		  padding-bottom: 1vw;
+		  padding-right: .5vw;
+		  padding-left: .5vw;
 		  right: 3vw;
 		}
 		#artworks{
@@ -538,7 +542,7 @@
 
     <div class="mySlides">
       <div class="numbertext">11 / 15</div>
-      	<video poster="assets/artwork/thumbnails/ijwsp_cover.png" controls><source src="assets/artwork/ijswp.mp4" type="video/mp4">Your browser does not support the video tag.</video>
+      	<video poster="assets/artwork/thumbnails/ijwsp_cover.png" controls><source src="assets/artwork/ijwsp.mp4" type="video/mp4">Your browser does not support the video tag.</video>
     </div>
 
     <div class="mySlides">
@@ -586,52 +590,6 @@
 	      <img class="demo cursor" src="assets/artwork/thumbnails/spider_cover.png" onclick="currentSlide(14)" title="Creeper" alt="made with Blender, Unity, After Effects, and Final Cut Pro">
 	      <img class="demo cursor" src="assets/artwork/earthling.gif" onclick="currentSlide(15)" title="Earthling" alt="animated in Photoshop">
     </div>
-
-<!--     <div class="column">
-      <img class="demo cursor" src="assets/artwork/En Route.JPG" style="width:100%" onclick="currentSlide(1)" title="En Route" alt="acrylic on canvas">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="assets/artwork/Losing My Grip.jpg" style="width:100%" onclick="currentSlide(2)" title="Losing My Grip" alt="acrylic on canvas">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="assets/artwork/nothing more.jpg" style="width:100%" onclick="currentSlide(3)" title="Nothing More" alt="acrylic on canvas">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="assets/artwork/fear.jpg" style="width:100%" onclick="currentSlide(4)" title="Encounter" alt="paper and glue">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="assets/artwork/thumbnails/love_cover.png" style="width:100%" onclick="currentSlide(5)" title="Love" alt="animated in Photoshop">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="assets/artwork/dahaht.jpg" style="width:100%" onclick="currentSlide(6)" title="Does anyone have a hair tie?" alt="drawn in Photoshop">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="assets/artwork/photosynthesmize.jpg" style="width:100%" onclick="currentSlide(7)" title="Photosynthesmize" alt="drawn in Photoshop">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="assets/artwork/thumbnails/scream_cover.png" style="width:100%" onclick="currentSlide(8)" title="Scream" alt="animated in After Effects and Photoshop">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="assets/artwork/thumbnails/tcaoy_cover.png" style="width:100%" onclick="currentSlide(9)" title="They're Crawling All Over You" alt="animated in After Effects, music sampled from Marina and the Diamonds">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="assets/artwork/mouth.gif" style="width:100%" onclick="currentSlide(10)" title="Taste(buds)" alt="animated in Photoshop">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="assets/artwork/thumbnails/ijwsp_cover.png" style="width:100%" onclick="currentSlide(11)" title="I just want some privacy." alt="This piece is a sound-reactive application that was coded in Max, a visual programming language, and animated in After Effects and Photoshop. Both the interaction and the movement were designed to give an impossible creature just enough life to connect with people.">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="assets/artwork/selfportrait.PNG" style="width:100%" onclick="currentSlide(12)" title="Portrait" alt="made with Photoshop">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="assets/artwork/thumbnails/moai_cover.png" style="width:100%" onclick="currentSlide(13)" title="Among the Moai" alt="animated in Blender and After Effects">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="assets/artwork/thumbnails/spider_cover.png" style="width:100%" onclick="currentSlide(14)" title="Creeper" alt="made with Blender, Unity, After Effects, and Final Cut Pro">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="assets/artwork/earthling.gif" style="width:100%" onclick="currentSlide(15)" title="Earthling" alt="animated in Photoshop">
-    </div> -->
 
   </div>
 </div>
