--- a/shop_submitted.html
+++ b/shop_submitted.html
@@ -5,6 +5,7 @@
 	<title>Annie Courtney</title>
 	<link rel = "stylesheet" type = "text/css" href = "genStyle.css" />
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Josefin+Slab&display=swap" rel="stylesheet">
+	<link rel='icon' href='assets/flower_vector.svg'/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <script type='text/javascript'>
