--- a/contact_submitted.html
+++ b/contact_submitted.html
@@ -257,6 +257,12 @@
 <div id="inner_box">
 <!--page specific-->
 
+<div class="alert">
+  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+  <br>
+  Thank you! Your message has been submitted and I will get back to you as soon as possible. - Annie
+</div>
+
 
 	<div id="handles">
 		<a href="mailto:annie.t.courtney@gmail.com"><p id="my_email"><img id="puffalope" src="assets/mail.svg" width="30vw"><a id="email_text" href="mailto:annie.t.courtney@gmail.com"> annie.t.courtney@gmail.com</a></p></a>
