--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Annie Courtney</title>
 	<link rel = "stylesheet" type = "text/css" href = "genStyle.css" />
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Josefin+Slab&display=swap" rel="stylesheet">
-	<link rel='icon' href='assets/flower_vector.svg'/>
+	<link rel='icon' href='assets/favicon1.svg'/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <style>
