light box comments top margin desktop version

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel = "stylesheet" type = "text/css" href = "genStyle.css" />
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Josefin+Slab&display=swap" rel="stylesheet">
 	<link rel='icon' href='assets/favicon1.svg'/>
-	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="favicon1.svg" />
+<!-- 	<link rel="apple-touch-icon-precomposed" href="favicon1.svg" /> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <style>
@@ -449,6 +449,7 @@
 		  margin-right: 4vw;
 		  padding-left: 4vw;
 		  padding-right: 4vw;
+		  margin-top: 1vw;
 		  font-size: 2vw;
 		}
 
