contact doodle done

--- a/contact.html
+++ b/contact.html
@@ -72,9 +72,10 @@
 		color: black;
 	}
 	#doodle{
-		width: 96vw;
+		width: 110vw;
 		height: auto;
 		margin-top: -2vw;
+		margin-bottom: -5vw;
 	}
 	#email_box{
 		font-size: 5vw;
@@ -199,11 +200,12 @@
 		}
 		#doodle{
 			height: auto;
-			width: 50vw;
-			margin-top: -6vw;
+			width: 62vw;
+			margin-top: -8vw;
+			margin-bottom: 0;
 		}
 		#email_box{
-			margin: -44vw/*top*/ 0/*right*/ 2vw/*bottom*/ 52.5vw/*left*/;
+			margin: -48.1vw/*top*/ 0/*right*/ 2vw/*bottom*/ 52.5vw/*left*/;
 			width: 45vw;
 			height: auto;
 			font-size: 2vw;
@@ -270,7 +272,7 @@
 		<a href="http://instagram.com/annietcourtney" target="_blank" rel="noopener noreferrer"><p id="insta_handle"><img id="insta_icon" src="assets/insta.svg" width="30vw"><a id="insta_text" href="http://instagram.com/annietcourtney" target="_blank" rel="noopener noreferrer"> @annietcourtney</a></p></a>
 	</div>
 <div id="phone">
-	<img  id="doodle" src="assets/contact_me_sample.png" alt="doodle of girl on phone">
+	<img  id="doodle" src="assets/contact_me.png" alt="doodle of girl on phone">
 </div>
 	<div id="email_box">
 		<form action="https://formsubmit.co/annie.t.courtney@gmail.com" 
