--- a/contact_submitted.html
+++ b/contact_submitted.html
@@ -71,9 +71,10 @@
 		color: black;
 	}
 	#doodle{
-		width: 96vw;
+		width: 110vw;
 		height: auto;
 		margin-top: -2vw;
+		margin-bottom: -5vw;
 	}
 	#email_box{
 		font-size: 5vw;
@@ -197,11 +198,12 @@
 		}
 		#doodle{
 			height: auto;
-			width: 50vw;
-			margin-top: -6vw;
+			width: 62vw;
+			margin-top: -8vw;
+			margin-bottom: 0;
 		}
 		#email_box{
-			margin: -44vw/*top*/ 0/*right*/ 2vw/*bottom*/ 52.5vw/*left*/;
+			margin: -48.1vw/*top*/ 0/*right*/ 2vw/*bottom*/ 52.5vw/*left*/;
 			width: 45vw;
 			height: auto;
 			font-size: 2vw;
@@ -263,13 +265,12 @@
   Thank you! Your message has been submitted and I will get back to you as soon as possible. - Annie
 </div>
 
-
 	<div id="handles">
 		<a href="mailto:annie.t.courtney@gmail.com"><p id="my_email"><img id="puffalope" src="assets/mail.svg" width="30vw"><a id="email_text" href="mailto:annie.t.courtney@gmail.com"> annie.t.courtney@gmail.com</a></p></a>
 		<a href="http://instagram.com/annietcourtney" target="_blank" rel="noopener noreferrer"><p id="insta_handle"><img id="insta_icon" src="assets/insta.svg" width="30vw"><a id="insta_text" href="http://instagram.com/annietcourtney" target="_blank" rel="noopener noreferrer"> @annietcourtney</a></p></a>
 	</div>
 <div id="phone">
-	<img  id="doodle" src="assets/contact_me_sample.png" alt="doodle of girl on phone">
+	<img  id="doodle" src="assets/contact_me.png" alt="doodle of girl on phone">
 </div>
 	<div id="email_box">
 		<form action="https://formsubmit.co/annie.t.courtney@gmail.com" 
