--- a/shop.html
+++ b/shop.html
@@ -247,6 +247,8 @@ function preview_image(event)
 		width: 100%;
 		height: auto;
 		position: relative;
+		margin-bottom: -9vw;
+		margin-top: -5vw;
 	}
 	#doodle_left{
 		display: none;
